# Lidercom-kr-Peru-Platform-ML-Backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.architecture.md  README.md
App/: README.md  init.sql  requirements.txt
App/Test/: demo_rust_services.py  test1.py  test_permission_cache.py  test_redis_health.py  test_rust_services.py  test_rust_services_avanzado.py
App/account_provider/adapters/driven/: postgres_account_provider_repository.py
App/auth/casbin/: policy.csv
App/auth_service/: Cargo.toml
App/auth_service/src/mblockchain/: mod.rs
App/auth_service/src/mcrypto/: mod.rs
App/auth_service/src/mtopy/: mod.rs
App/db/: .env  .env.example  config.py
App/db/migrations/: 001_create_employee_program.sql
App/graphql/: __init__.py  context.py  server.py
App/graphql/schema/: index.py
App/redis_services/: __init__.py  permission_cache.py  redis_client.py
App/rust_services/: .gitignore  Cargo.toml  README.encrypt  README.md  build.rs
App/rust_services/src/: lib.rs  main.rs
Test/DBTests/BoudariesTable/: .env  .env.example  import_gadm.py  migrateGADM.py  migrate_gadm.py  seeDetailGADM.py
Test/DBTests/backend/: .env.example  requirements.txt
Test/JAM/jam_keygen/: Cargo.toml
k8s/00-DB/: README.md  psql-local.yaml  psql-service.yaml
k8s/01-BACKEND/: Deploy.yaml  backend-ingress.yaml  backend-service.yaml  redis-deployment.yaml
k8s/02-FRONTEND/: admin-frontend.yaml  frontend-ingress.yaml  superior-frontend.yaml
k8s/03-REVERSE-PROXY/: README.md  nginx.conf  setup.sh
k8s/05-CLOUDFLARE/: cloudflared-deploy.yaml
(+71 files in other folders)
