[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sp-core = "40.0.0"
tokio = { version = "1.52.1", features = ["full"] }
